[tool.poetry]
name = "fast-tools"
version = "1.0.0"
description = "fast-tools is a FastApi/Starlette toolset, Most of the tools can be used in FastApi/Starlette, a few tools only support FastApi which is divided into the lack of compatibility with FastApi"
authors = ["So1n <qaz6803609@163.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
black = "^20.8b1"
mypy = "^0.79
aioredis = "^1.3.1"
fastapi = "^0.61.2"
prometheus-client = "^0.8.0"

[tool.black]
line-length = 120
target-version = ['py37']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
