[tool.poetry]
name = "fast-tools"
version = "1.1.1"
description = "fast-tools is a FastApi/Starlette toolset, Most of the tools can be used in FastApi/Starlette, a few tools only support FastApi which is divided into the lack of compatibility with FastApi"
authors = ["So1n <so1n897046026@gmail.com>"]
license = "MIT License"
readme = "./README.md"
repository = "https://github.com/so1n/fast-tools"
homepage = "https://github.com/so1n/fast-tools"

[tool.poetry.dependencies]
python = "^3.7"
aioredis = {version = "^1.3.1", optional = true }
prometheus-client = {version = "^0.8.0", optional = true }
aio-statsd = {version = "^0.2.2", optional = true }
pydantic = {version = "^1.8.1", optional = true }
environs = {version = "^9.3.1", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
black = "^20.8b1"
fastapi = "^0.61.2"
mypy = "^0.790"

[tool.poetry.extras]
statsd = ["aio-statsd"]
redis = ["aioredis"]
prometheus = ["prometheus-client"]
pydantic = ["pydantic"]
config = ["environs"]


[tool.black]
line-length = 120
target-version = ['py37']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
