[tool.poetry]
name = "fast-tools"
version = "1.1.2"
description = "fast-tools is a FastApi/Starlette toolset, Most of the tools can be used in FastApi/Starlette, a few tools only support FastApi which is divided into the lack of compatibility with FastApi"
authors = ["So1n <so1n897046026@gmail.com>"]
license = "MIT License"
readme = "./README.md"
repository = "https://github.com/so1n/fast-tools"
homepage = "https://github.com/so1n/fast-tools"

[tool.poetry.dependencies]
python = "^3.7"
aioredis = {version = "^1.3.1", optional = true }
prometheus-client = { version = "^0.9.0", optional = true}
aio-statsd = "0.2.7"
pydantic = {version = "^1.8.2", optional = true }
environs = {version = "^9.3.1", optional = true }
ojson = {version = "^0.1.0", optional = true }
ujson = {version = "^4.0.2", optional = true }
PyYAML = "^5.4.1"
opentracing = { version = "^2.4.0", optional = true }
apache-skywalking = { version = "^0.7.0", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
black = "^20.8b1"
fastapi = "^0.65.2"
mypy = "^0.790"
uvicorn = "^0.13.4"
httpx = "^0.21.1"
isort = "^5.8.0"
pytest-mock = "^3.5.1"
requests = "^2.25.1"
pytest-asyncio = "^0.15.0"
coverage = "^5.5"
pre-commit = "^2.14.0"
autoflake = "^1.4"
flake8 = "^3.9.2"
types-PyYAML = "^5.4.6"
types-requests = "^2.25.6"
jaeger-client = "^4.8.0"
opentracing-async-instrumentation = "^0.2.1"
aiohttp = "^3.8.1"

[tool.poetry.extras]
statsd = ["aio-statsd"]
redis = ["aioredis"]
prometheus = ["prometheus-client"]
pydantic = ["pydantic"]
config = ["environs"]
ojson = ["ojson"]
ujson = ["ujson"]
opentracing = ["opentracing"]
apache-skywalking = ["apache-skywalking"]

[tool.black]
line-length = 120
target-version = ['py37']

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120


[tool.pytest]
testpaths = "tests"

[tool.coverage.run]
branch = true
source = ["fast_tools"]

[tool.coverage.report]
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",

    # Don't complain about missing debug-only code:
    "def __repr__",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # type hints
    "if TYPE_CHECKING:",
    "pass"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
